# kgcore

./: .gitignore  .gitlab-ci.yml  CHANGELOG_SESSION.md  CI_README.md  Dockerfile  README.md  REDUNDANCY_ANALYSIS.md  STRUCTURE_PROPOSAL.md  SYSTEM_DECORATORS_ANALYSIS.md  llm_text.md  main.py  pyproject.toml
docs/: README.md  cli.md  conversion_modes.md  core_graph_model.md  index.md  model_converters.md  query_support.md  rdf_backend.md  rdf_storage.md  related.md  system_graph.md
examples/: core_kg_api.py  system_kg_api.py
src/kgcore/: api.py  cli.py  config.py
src/kgcore/api/: __init__.py  backend.py  kg.py  model.py  ontology.py
src/kgcore/api/common/: __init__.py  types.py
src/kgcore/backend/: __init__.py  factory.py  memory.py  rdf_file.py  rdf_rdflib.py
src/kgcore/backend/core/: core_memory.py
src/kgcore/backend/rdf/: __init__.py  rdf_rdflib.py  rdf_sparql.py  rdfbackend.py
src/kgcore/backend/serialization/: jsonld.py
src/kgcore/common/: errors.py  types.py
src/kgcore/conversion/: converters.py
src/kgcore/decorators/: class_.py  event.py
src/kgcore/examples/: 01_minimal_inmemory.py  02_rdf_file_persistence.py  03_rdf_reification.py  04_reification_demo.py  05_decorators_demo.py  06_versioning_demo.py
src/kgcore/impl/: rdflib.py
src/kgcore/meta/: annotation.py  meta_kg.py
src/kgcore/model/: __init__.py  base.py  graph.py  ontology.py
src/kgcore/model/cgm/: cgm.py
src/kgcore/model/rdf/: __init__.py  rdf_base.py
src/kgcore/system/: __init__.py  decorators.py  introspection.py  protocol.py  publishing.py  recorder.py  schema.py  serialization.py  tracker.py
src/kgcore/system/handlers/: __init__.py  base.py
src/kgcore/system/integrations/: __init__.py  pydantic_int.py
src/kgcore/test/: test_basic.py  test_model.py
src/kgcore/test/system/: test_decorators.py  test_integrations_pydantic.py  test_serialization.py  test_tracker.py
src/kgcore/tests/: test_meta.py  test_ontology.py  test_rdf_file.py  test_rdf_reification.py  test_reification.py  test_smoke.py  test_versioning.py
