[project]
name = "kgcore"
version = "0.1.0"
description = "Unified Python API for Knowledge Graph models (RDF, PGM) with decorators, system graph, and JSON-LD export."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["knowledge-graph", "RDF", "property-graph", "API", "JSON-LD"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.3.0",
    "pydantic>=2.0",
    "rdflib>=7.0.0",
    "click>=8.1",
    "pytest>=8.0",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["src/kgcore/test"]

[tool.coverage.run]
source = ["src/kgcore"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "B"]
ignore = ["E501"]  # Ignore long lines temporarily
exclude = ["venv", "build", "dist"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kgcore*"]

[tool.setuptools.package-dir]
"" = "src" 


[project.scripts]
kgcore = "kgcore.cli:cli"
